--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
+    "date-fns": "^2.30.0",
+    "sweetalert2": "^11.7.28",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
